--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-leaflet": "^5.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.1",
+    "react-simple-typewriter": "^5.0.1",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
@@ -34,6 +35,6 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
-    "vite": "^7.1.1"
+    "vite": "^7.1.2"
   }
 }
